--- a/index.html
+++ b/index.html
@@ -82,9 +82,8 @@
   <div id="res"></div>
   
   <script>
+    var nom1 = document.getElementsById("nom");
     let b1=document.querySelector('button');
-    var nom1 = document.getElementsById("nom")
-    
     b1.addEventListener('click',function(){alert('Validation confirmée, merci '+nom1.value)})
   </script>
   
