Update nouvel essai index.html

--- a/nouvel essai index.html
+++ b/nouvel essai index.html
@@ -115,6 +115,20 @@
 
 
 
+???
+
+  <div id="res">
+    <script>
+      let liste_fruit =[];
+      var element = document.getElementsByName("fruit");
+      for (var i=0; i<element.length; i++){
+        if (element[i].checked==true){
+          let newLength = liste.push(element[i].value);}
+      }
+      console.log(liste)
+    </script>
+      
+  </div>
 
 
 
